--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/xtenix88/Data-Portfolio/blob/main/Covid-Portfolio-Project.sql" class="link" target="_blank">Data Analysis</a></h3>
-										<p>covid data analysis</p>
+										<p>covid data analysis in SQL Server</p>
 									</header>
 								</article>
 								<article>
@@ -98,7 +98,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/xtenix88/Statistic-Analysis-with-R" class="link" target="_blank">Statistical Analysis</a></h3>
-										<p>R code with various dataset</p>
+										<p>Statsitic and Data Model in R</p>
 									</header>
 								</article>
 								<article>
