--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/xtenix88/Statistic-Analysis-with-R" class="link" target="_blank">Statistical Analysis</a></h3>
-										<p>Statsitic and Data Model in R</p>
+										<p>Statistic and Analysis in R</p>
 									</header>
 								</article>
 								<article>
